[package]
name = "redis"
version = "0.1.0"
authors = ["Michael Angerman <stormasm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
redis = "*"
r2d2 = "*"
r2d2_redis = "*"
