[package]
name = "rt"
version = "0.1.0"
edition = "2021"

[dependencies]
md5 = "0.7.0"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
querystring = "1.1.0"
#reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.19", features = [
    "fs",
    "macros",
    "net",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
urlencoding = "2.1.3"
futures = "0.3"
